--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=1, minimum-scale=0.5">
     <title>Adoções AM</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,9 +45,9 @@
         <div class="container container-flex">
             <img src="./images/casa.jpg" alt="Imagem casa do abrigo">
         <div>
-            <h2>
+            <h2><u>
                 Sobre o abrigo
-            </h2>
+            </u></h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odio aliquam eligendi ratione explicabo a quae animi vitae, at ullam repellendus quasi harum, libero ad dolore inventore suscipit doloremque officia.
             </p>
@@ -94,7 +94,7 @@
                     </p>
                     <button type="button">Quero adotar</button>
                 </li>
-                <li>
+                <li class="item-central">
                     <img src="./images/ad4.jpg" alt="adocao4">
                     <h3>
                         Mingau
@@ -104,7 +104,7 @@
                     </p>
                     <button type="button">Quero adotar</button>
                 </li>
-                <li class="item-central">
+                <li>
                     <img src="./images/ad5.jpg" alt="adocao5">
                     <h3>
                         Frajola
@@ -114,7 +114,7 @@
                     </p>
                     <button type="button">Quero adotar</button>
                 </li>
-                <li>
+                <li class="item-central">
                     <img src="./images/ad6.jpg" alt="adocao6">
                     <h3>
                         Verdinha
@@ -124,44 +124,27 @@
                     </p>
                     <button type="button">Quero adotar</button>
                 </li>
+                <li>
+                    <img src="./images/ad7.jpg" alt="adocao7">
+                    <h3>
+                        Caputina
+                    </h3>
+                    <p>
+                        Sem raça definida
+                    </p>
+                    <button type="button">Quero adotar</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/ad8.jpg" alt="adocao8">
+                    <h3>
+                        Milu
+                    </h3>
+                    <p>
+                        Sem raça definida
+                    </p>
+                    <button type="button">Quero adotar</button>
+                </li>
             </ul>
-        </div>
-    </section>
-
-    <section id="cadastro">
-        <div class="container">
-            <h2>Dados do adotante</h2>
-        <form>
-            <div class="form-campo">
-                <label for="nome">Nome</label>
-                <input type="text" id="nome" name="nome">
-            </div>
-            <div class="form-campo">
-                <label for="email">E-mail</label>
-                <input type="text" id="email" name="email">
-            </div>
-            <div class="form-campo">
-                <label for="telefone">Telefone</label>
-                <input type="tel" id="telefone" name="telefone">
-            </div>
-            <div class="form-campo">
-                <label for="cpf">CPF</label>
-                <input type="text" id="cpf" name="cpf">
-            </div>
-            <div class="form-campo">
-                <label for="endreco">Endereço</label>
-                <input type="text" id="endereco" name="endereco">
-            </div>
-            <div class="form-campo">
-                <label for="cep">CEP</label>
-                <input type="text" name="cep" id="cep">
-            </div>
-            <div class="form-campo">
-                <label for="pet">Pet de interesse</label>
-                <input type="text" name="pet" id="pet">
-            </div>
-            <button type="submit">Enviar</button>
-        </form>    
         </div>
     </section>
 
