--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     
     <section id="sobre-abrigo">
         <div class="container container-flex">
-            <img src="./images/casa.jpg" alt="Imagem casa do abrigo">
+            <picture>
+                <source srcset="./images/casa-3.jpg" media="(max-width: 640px)"/>
+                <source srcset="./images/casa-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
+                <img src="./images/casa.jpg" alt="Imagem casa do abrigo">
         <div>
             <h2><u>
                 Sobre o abrigo
@@ -65,7 +68,11 @@
             </h2>
             <ul class="container-flex lista-adocao">
                 <li>
-                    <img src="./images/ad1.jpg" alt="adocao1">
+                    <picture>
+                        <source srcset="./images/ad1-3.jpg" media="(max-width: 640px)"/>
+                        <source srcset="./images/ad1-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
+                        <img src="./images/ad1.jpg" alt="adocao1">
+                    </picture>
                     <h3>
                         Mustafá
                     </h3>
@@ -75,7 +82,11 @@
                     <button type="button">Quero adotar</button>
                 </li>
                 <li class="item-central">
-                    <img src="./images/ad2.jpg" alt="adocao2">
+                    <picture>
+                        <source srcset="./images/ad2-3.jpg" media="(max-width: 640px)"/>
+                        <source srcset="./images/ad2-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
+                        <img src="./images/ad2.jpg" alt="adocao2">
+                    </picture>
                     <h3>
                         Ferrugem
                     </h3>
@@ -85,7 +96,11 @@
                     <button type="button">Quero adotar</button>
                 </li>
                 <li>
-                    <img src="./images/ad3.jpg" alt="adocao3">
+                    <picture>
+                        <source srcset="./images/ad3-3.jpg" media="(max-width: 640px)"/>
+                        <source srcset="./images/ad3-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
+                        <img src="./images/ad3.jpg" alt="adocao3">
+                    </picture>
                     <h3>
                         Negão
                     </h3>
@@ -94,8 +109,12 @@
                     </p>
                     <button type="button">Quero adotar</button>
                 </li>
-                <li class="item-central">
-                    <img src="./images/ad4.jpg" alt="adocao4">
+                <li>
+                    <picture>
+                        <source srcset="./images/ad4-3.jpg" media="(max-width: 640px)"/>
+                        <source srcset="./images/ad4-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
+                        <img src="./images/ad4.jpg" alt="adocao4">
+                    </picture>
                     <h3>
                         Mingau
                     </h3>
@@ -104,8 +123,12 @@
                     </p>
                     <button type="button">Quero adotar</button>
                 </li>
-                <li>
-                    <img src="./images/ad5.jpg" alt="adocao5">
+                <li class="item-central">
+                    <picture>
+                        <source srcset="./images/ad5-3.jpg" media="(max-width: 640px)"/>
+                        <source srcset="./images/ad5-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
+                        <img src="./images/ad5.jpg" alt="adocao5">
+                    </picture>
                     <h3>
                         Frajola
                     </h3>
@@ -114,8 +137,12 @@
                     </p>
                     <button type="button">Quero adotar</button>
                 </li>
-                <li class="item-central">
-                    <img src="./images/ad6.jpg" alt="adocao6">
+                <li>
+                    <picture>
+                        <source srcset="./images/ad6-3.jpg" media="(max-width: 640px)"/>
+                        <source srcset="./images/ad6-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
+                        <img src="./images/ad6.jpg" alt="adocao6">
+                    </picture>
                     <h3>
                         Verdinha
                     </h3>
@@ -125,8 +152,12 @@
                     <button type="button">Quero adotar</button>
                 </li>
                 <li>
-                    <img src="./images/ad7.jpg" alt="adocao7">
-                    <h3>
+                    <picture>
+                        <source srcset="./images/ad7-3.jpg" media="(max-width: 640px)"/>
+                        <source srcset="./images/ad7-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
+                        <img src="./images/ad7.jpg" alt="adocao7">
+                    </picture>
+                        <h3>
                         Caputina
                     </h3>
                     <p>
@@ -135,7 +166,11 @@
                     <button type="button">Quero adotar</button>
                 </li>
                 <li class="item-central">
-                    <img src="./images/ad8.jpg" alt="adocao8">
+                    <picture>
+                        <source srcset="./images/ad8-3.jpg" media="(max-width: 640px)"/>
+                        <source srcset="./images/ad8-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
+                        <img src="./images/ad8.jpg" alt="adocao8">
+                    </picture>
                     <h3>
                         Milu
                     </h3>
@@ -175,6 +210,10 @@
     <script src="./js/jquery.validate.min.js"></script>
     <script src="./js/messages_pt_BR.min.js"></script>
     <script src="./js/main.js"></script>
-
+<!--
+    +1024
+    1023~641
+    -640
+-->
 </body>
 </html>
