--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </p>
                     <button type="button">Quero adotar</button>
                 </li>
-                <li class="item-central">
+                <li class="item-central item-central-tablet">
                     <picture>
                         <source srcset="./images/ad5-3.jpg" media="(max-width: 640px)"/>
                         <source srcset="./images/ad5-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
