--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=1, minimum-scale=0.5">
-    <title>Adoções AM</title>
+    <title>Adoções Amazonas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">      
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
@@ -16,14 +17,12 @@
     <header>
         <div class="container container-flex">
             <h1>ABRIGO DONA WAL</h1>
-            <div>
                 <div class="hamburguer">
                     <span></span>
                     <span></span>
                     <span></span>
-                </div>
-            </div>
-        </div>    
+                </div>        
+        </div>
         <nav>
             <div class="container">
                 <ul>
@@ -40,37 +39,34 @@
             </div>
         </nav>
     </header>
-    
-    <section id="sobre-abrigo">
-        <div class="container container-flex">
-            <picture>
-                <source srcset="./images/casa-3.jpg" media="(max-width: 640px)"/>
-                <source srcset="./images/casa-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
-                <img src="./images/casa.jpg" alt="Imagem casa do abrigo">
-        <div>
-            <h2><u>
-                Sobre o abrigo
-            </u></h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odio aliquam eligendi ratione explicabo a quae animi vitae, at ullam repellendus quasi harum, libero ad dolore inventore suscipit doloremque officia.
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus ducimus, rem nobis ea repellendus a expedita sunt nisi fugit eos incidunt adipisci numquam, similique suscipit voluptas architecto accusantium consequatur aspernatur.
-            </p>
-        </div>
+
+    <section>
+        <div class="container grid-sobre-abrigo">
+            <picture class="grid-casa">
+                <img src="./images/casa.jpg" alt="Imagem Sede">
+            </picture>
+            <div class="grid-texto">
+                <h2>
+                        Sobre o abrigo
+                </h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quas nihil explicabo nobis a veniam? Voluptatum, modi! Animi dolore sunt adipisci tempore magni! Odio, quae neque? Repudiandae laudantium nihil placeat!
+                </p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quas nihil explicabo nobis a veniam? Voluptatum, modi! Animi dolore sunt adipisci tempore magni! Odio, quae neque? Repudiandae laudantium nihil placeat!
+                </p>
+            </div>
         </div>
     </section>
 
     <section>
         <div class="container">
             <h2>
-                DESTAQUES DO MÊS
+                DESTAQUE DO MÊS
             </h2>
-            <ul class="container-flex lista-adocao">
-                <li>
+            <div class="grid-bixos container-flex">
+                <div class="bixo1">
                     <picture>
-                        <source srcset="./images/ad1-3.jpg" media="(max-width: 640px)"/>
-                        <source srcset="./images/ad1-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
                         <img src="./images/ad1.jpg" alt="adocao1">
                     </picture>
                     <h3>
@@ -79,12 +75,12 @@
                     <p>
                         Sem raça definida
                     </p>
-                    <button type="button">Quero adotar</button>
-                </li>
-                <li class="item-central">
+                    <button type="button">
+                        Quero Adotar
+                    </button>
+                </div>
+                <div class="bixo2">
                     <picture>
-                        <source srcset="./images/ad2-3.jpg" media="(max-width: 640px)"/>
-                        <source srcset="./images/ad2-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
                         <img src="./images/ad2.jpg" alt="adocao2">
                     </picture>
                     <h3>
@@ -93,12 +89,12 @@
                     <p>
                         Sem raça definida
                     </p>
-                    <button type="button">Quero adotar</button>
-                </li>
-                <li>
+                    <button type="button">
+                        Quero Adotar
+                    </button>
+                </div>
+                <div class="bixo3">
                     <picture>
-                        <source srcset="./images/ad3-3.jpg" media="(max-width: 640px)"/>
-                        <source srcset="./images/ad3-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
                         <img src="./images/ad3.jpg" alt="adocao3">
                     </picture>
                     <h3>
@@ -107,12 +103,12 @@
                     <p>
                         Sem raça definida
                     </p>
-                    <button type="button">Quero adotar</button>
-                </li>
-                <li>
+                    <button type="button">
+                        Quero Adotar
+                    </button>
+                </div>
+                <div class="bixo4">
                     <picture>
-                        <source srcset="./images/ad4-3.jpg" media="(max-width: 640px)"/>
-                        <source srcset="./images/ad4-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
                         <img src="./images/ad4.jpg" alt="adocao4">
                     </picture>
                     <h3>
@@ -121,12 +117,12 @@
                     <p>
                         Sem raça definida
                     </p>
-                    <button type="button">Quero adotar</button>
-                </li>
-                <li class="item-central item-central-tablet">
+                    <button type="button">
+                        Quero Adotar
+                    </button>
+                </div>
+                <div class="bixo5">
                     <picture>
-                        <source srcset="./images/ad5-3.jpg" media="(max-width: 640px)"/>
-                        <source srcset="./images/ad5-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
                         <img src="./images/ad5.jpg" alt="adocao5">
                     </picture>
                     <h3>
@@ -135,56 +131,58 @@
                     <p>
                         Sem raça definida
                     </p>
-                    <button type="button">Quero adotar</button>
-                </li>
-                <li>
+                    <button type="button">
+                        Quero Adotar
+                    </button>
+                </div>
+                <div class="bixo6">
                     <picture>
-                        <source srcset="./images/ad6-3.jpg" media="(max-width: 640px)"/>
-                        <source srcset="./images/ad6-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
                         <img src="./images/ad6.jpg" alt="adocao6">
                     </picture>
                     <h3>
-                        Verdinha
+                        Mustafá
                     </h3>
                     <p>
                         Sem raça definida
                     </p>
-                    <button type="button">Quero adotar</button>
-                </li>
-                <li>
+                    <button type="button">
+                        Quero Adotar
+                    </button>
+                </div>
+                <div class="bixo7">
                     <picture>
-                        <source srcset="./images/ad7-3.jpg" media="(max-width: 640px)"/>
-                        <source srcset="./images/ad7-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
                         <img src="./images/ad7.jpg" alt="adocao7">
                     </picture>
-                        <h3>
-                        Caputina
+                    <h3>
+                        Mustafá
                     </h3>
                     <p>
                         Sem raça definida
                     </p>
-                    <button type="button">Quero adotar</button>
-                </li>
-                <li class="item-central">
+                    <button type="button">
+                        Quero Adotar
+                    </button>
+                </div>
+                <div class="bixo8">
                     <picture>
-                        <source srcset="./images/ad8-3.jpg" media="(max-width: 640px)"/>
-                        <source srcset="./images/ad8-2.jpg" media="(min-width: 641px) and (max-width:1023px)"/>
                         <img src="./images/ad8.jpg" alt="adocao8">
                     </picture>
                     <h3>
-                        Milu
+                        Mustafá
                     </h3>
                     <p>
                         Sem raça definida
                     </p>
-                    <button type="button">Quero adotar</button>
-                </li>
-            </ul>
+                    <button type="button">
+                        Quero Adotar
+                    </button>
+                </div>
+            </div>
         </div>
     </section>
 
     <footer>
-        <div class="container container-class">
+        <div class="container">
             <p>Siga nossas redes sociais</p>
             <ul>
                 <li>
@@ -210,10 +208,5 @@
     <script src="./js/jquery.validate.min.js"></script>
     <script src="./js/messages_pt_BR.min.js"></script>
     <script src="./js/main.js"></script>
-<!--
-    +1024
-    1023~641
-    -640
--->
 </body>
 </html>
