--- a/index.html
+++ b/index.html
@@ -182,23 +182,19 @@
     </section>
 
     <footer>
-        <div class="container">
+        <div class="container grid-cabecalho">
             <p>Siga nossas redes sociais</p>
-            <ul>
-                <li>
-                    <a href="#"></a>
-                        <img src="./images/facebook.png" alt="Facebook">
-                </li>
-                <li>
-                    <a href="#"></a>
-                        <img src="./images/instagram.png" alt="Instagram">
-                </li>
-                <li>
-                    <a href="#"></a>
-                        <img src="./images/youtube.png" alt="Youtube">
-                </li>
-            </ul>
+    <div class="cabecalho">
+        <a href="#"></a>
+            <img src="./images/facebook.png" alt="Facebook">
+    
+        <a href="#"></a>
+            <img src="./images/instagram.png" alt="Instagram">
+    
+        <a href="#"></a>
+            <img src="./images/youtube.png" alt="Youtube">          
         </div>
+    </div>
     </footer>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
