--- a/boot.html
+++ b/boot.html
@@ -33,10 +33,14 @@
         }
 
         .custon-card img {
-            max-width: 100px;
-            max-height: 100px;
+            max-width: 140px;
+            max-height: 140px;
             margin: 0 auto;
             display: blcok;
+        }
+
+        .card-titulo {
+            margin-bottom: -2vh;
         }
 
     </style>
@@ -45,7 +49,7 @@
     <header id="cabecalho">
         <div class="navbar navbar-expand-lg bg-dark border-body bg-body-tertiary" data-bs-theme="dark">
             <div class="container" style="color: #fff;">
-                <img src="./img/lampada.jpg" alt="Bootstrap" width="90" height="72">
+                <img src="./img/lampada.png" alt="Bootstrap" width="90" height="72">
                 <h1 style="margin-left: 2vh;">Lumiauto Shop</h1>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                     <span class="navbar-toggler-icon"></span>
@@ -100,7 +104,7 @@
 
         <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-12">
                         <article class="card custon-card">
                             <header class="card-header">
                                 <h2>PROMOÇÃO LUZES DE NATAL</h2>
@@ -109,23 +113,31 @@
                     </div>
                 </div>    
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-lg-4">
                             <article class="card custon-card text-bg-dark">
-                                <img src="./img/lamp1.jpg" alt="">
-                                <div class="card-img-overlay">
-                                    <h4 class="card-title">Lampadas de Led H1</h4>
+                                <header class="card-header card-titulo">
+                                    <h4 class="text-center">Lâmpadas de Led H1</h4>
+                                </header>
+                                <div class="card-body d-flex align-items-center">
+                                        <div class="col-md-4">
+                                            <img src="./img/lamp1.jpg" class="img-fluid">
+                                        </div>
+                                        <div class="col-md-9 align-items-center">
+                                            <p><h4>Marca: OSRAM</h4></p>
+                                            <p><h4>Marca: OSRAM</h4></p>
+                                            <p><h4>Marca: OSRAM</h4></p>
+                                        </div>                                   
                                 </div>
-                                
                             </article>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-4">
                             <article class="card custon-card text-bg-dark">
                                 <div class="card-body">
                                     <h4 class="card-title">Lampadas de Led H1</h4>
                                 </div>
                             </article>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-4">
                             <article class="card custon-card text-bg-dark">
                                 <div class="card-body">
                                     <h4 class="card-title">Lampadas de Led H1</h4>
