--- a/boot.html
+++ b/boot.html
@@ -43,6 +43,27 @@
             margin-bottom: -2vh;
         }
 
+        .text-img {
+            margin-left: 3vh;
+        }
+
+        .card-margem-botton {
+            margin-bottom: 3vh;
+        }
+
+        footer {
+            margin-top: 5vh;
+        }
+
+        footer p {
+            font-size: 1.5rem;
+        }
+
+        .social-icon {
+             margin-right: 4vh;
+             width: 3vw;
+        }
+
     </style>
 </head>
 <body>
@@ -78,77 +99,168 @@
         </div>
     </header>
 
-        <div class="container" style="margin-top: 5vh;">
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner carousel-fotos">
-              <div data-bs-interval="3000" class="carousel-item active">
-                <img src="./img/farol4.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div data-bs-interval="3000" class="carousel-item">
-                <img src="/img/farol1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div data-bs-interval="3000" class="carousel-item">
-                <img src="/img/farol3.jpg" class="d-block w-100" alt="...">
-              </div>
+    <div class="container" style="margin-top: 3vh;">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner carousel-fotos">
+            <div data-bs-interval="3000" class="carousel-item active">
+            <img src="./img/farol4.jpg" class="d-block w-100" alt="...">
             </div>
-            <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-              <span class="visually-hidden ">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+            <div data-bs-interval="3000" class="carousel-item">
+            <img src="/img/farol1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div data-bs-interval="3000" class="carousel-item">
+            <img src="/img/farol3.jpg" class="d-block w-100" alt="...">
+            </div>
         </div>
-
-        <div class="container">
+        <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+            <span class="visually-hidden ">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+        </div>
+    </div>
+    <p></p>
+    <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <article class="card custon-card text-bg-danger">
+                        <header class="card-header border border-0">
+                            <h2>PROMOÇÃO LUZES DE NATAL</h2>
+                        </header>
+                    </article>
+                </div>
+            </div>
+            <p></p>
+            <p></p>    
                 <div class="row">
-                    <div class="col-12">
-                        <article class="card custon-card">
-                            <header class="card-header">
-                                <h2>PROMOÇÃO LUZES DE NATAL</h2>
+                    <div class="col-lg-4 col-md-6 card-margem-botton">
+                        <article class="card custon-card border border-dark">
+                            <header class="card-header card-titulo text-bg-dark rounded-botton">
+                                <h4 class="text-center">Lâmpadas de Led H1</h4>
                             </header>
+                            <div class="card-body d-flex align-items-center btn btn-light">
+                                    <div class="col-md-4">
+                                        <img src="./img/lamp1.jpg" class="img-fluid">
+                                    </div>
+                                    <div class="align-items-center text-img">
+                                        <p><h4>Marca: OSRAM</h4></p>
+                                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
+                                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
+                                        <button type="submit" class="btn btn-outline-success">Compre</button>
+                                    </div>                                   
+                            </div>
                         </article>
                     </div>
-                </div>    
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <article class="card custon-card text-bg-dark">
-                                <header class="card-header card-titulo">
+                    <div class="col-lg-4 col-md-6">
+                        <article class="card custon-card border border-dark">
+                            <header class="card-header card-titulo text-bg-dark rounded-botton">
+                                <h4 class="text-center">Lâmpadas de Led H1</h4>
+                            </header>
+                            <div class="card-body d-flex align-items-center btn btn-light">
+                                    <div class="col-md-4">
+                                        <img src="./img/lamp1.jpg" class="img-fluid">
+                                    </div>
+                                    <div class="align-items-center text-img">
+                                        <p><h4>Marca: OSRAM</h4></p>
+                                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
+                                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
+                                        <button type="submit" class="btn btn-outline-success">Compre</button>
+                                    </div>                                   
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <article class="card custon-card border border-dark">
+                            <header class="card-header card-titulo text-bg-dark rounded-botton">
+                                <h4 class="text-center">Lâmpadas de Led H1</h4>
+                            </header>
+                            <div class="card-body d-flex align-items-center btn btn-light">
+                                    <div class="col-md-4">
+                                        <img src="./img/lamp1.jpg" class="img-fluid">
+                                    </div>
+                                    <div class="align-items-center text-img">
+                                        <p><h4>Marca: OSRAM</h4></p>
+                                        <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
+                                        <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
+                                        <button type="submit" class="btn btn-outline-success">Compre</button>
+                                    </div>                                   
+                            </div>
+                        </article>
+                    </div>
+                        </article>
+                        <div class="col-lg-4 col-md-6">
+                            <article class="card custon-card border border-dark">
+                                <header class="card-header card-titulo text-bg-dark rounded-botton">
                                     <h4 class="text-center">Lâmpadas de Led H1</h4>
                                 </header>
-                                <div class="card-body d-flex align-items-center">
+                                <div class="card-body d-flex align-items-center btn btn-light">
                                         <div class="col-md-4">
                                             <img src="./img/lamp1.jpg" class="img-fluid">
                                         </div>
-                                        <div class="col-md-9 align-items-center">
+                                        <div class="align-items-center text-img">
                                             <p><h4>Marca: OSRAM</h4></p>
-                                            <p><h4>Marca: OSRAM</h4></p>
-                                            <p><h4>Marca: OSRAM</h4></p>
+                                            <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
+                                            <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
+                                            <button type="submit" class="btn btn-outline-success">Compre</button>
                                         </div>                                   
                                 </div>
                             </article>
                         </div>
-                        <div class="col-4">
-                            <article class="card custon-card text-bg-dark">
-                                <div class="card-body">
-                                    <h4 class="card-title">Lampadas de Led H1</h4>
+                        <div class="col-lg-4 col-md-6">
+                            <article class="card custon-card border border-dark">
+                                <header class="card-header card-titulo text-bg-dark rounded-botton">
+                                    <h4 class="text-center">Lâmpadas de Led H1</h4>
+                                </header>
+                                <div class="card-body d-flex align-items-center btn btn-light">
+                                        <div class="col-md-4">
+                                            <img src="./img/lamp1.jpg" class="img-fluid">
+                                        </div>
+                                        <div class="align-items-center text-img">
+                                            <p><h4>Marca: OSRAM</h4></p>
+                                            <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
+                                            <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
+                                            <button type="submit" class="btn btn-outline-success">Compre</button>
+                                        </div>                                   
                                 </div>
                             </article>
                         </div>
-                        <div class="col-4">
-                            <article class="card custon-card text-bg-dark">
-                                <div class="card-body">
-                                    <h4 class="card-title">Lampadas de Led H1</h4>
+                        <div class="col-lg-4 col-md-6">
+                            <article class="card custon-card border border-dark">
+                                <header class="card-header card-titulo text-bg-dark rounded-botton">
+                                    <h4 class="text-center">Lâmpadas de Led H1</h4>
+                                </header>
+                                <div class="card-body d-flex align-items-center btn btn-light">
+                                        <div class="col-md-4">
+                                            <img src="./img/lamp1.jpg" class="img-fluid">
+                                        </div>
+                                        <div class="align-items-center text-img">
+                                            <p><h4>Marca: OSRAM</h4></p>
+                                            <p><h4 class="fs-6">Modelo: OSRAM</h4></p>
+                                            <p><h4 class="text-danger fs-2">R$: 299,99</h4></p>
+                                            <button type="submit" class="btn btn-outline-success">Compre</button>
+                                        </div>                                   
                                 </div>
                             </article>
                         </div>
                     </div>
                 </div>
-            </div>
-    
 
+    <footer class="text-bg-dark navbar navbar-expand-lg rounded-bottom">
+        <p style="margin-left: 10vh; margin-top:1vh;">Siga nossas redes sociais</p>
+            <div class="ms-auto">
+                <a href="#"></a>
+                    <img src="./img/facebook.png" class="social-icon img-fluid" alt="Facebook">
+
+                <a href="#"></a>
+                    <img src="./img/instagram.png" class="social-icon img-fluid" alt="Instagram">
+
+                <a href="#"></a>
+                    <img src="./img/youtube.png" class="social-icon img-fluid" alt="Youtube" style="margin-right: 10vh;>          
+            </div>
+    </footer>        
     <script src="./lib/bootstrap.bundle.min.js"></script>
 </body>
 </html>
